fixed spacing for tags field.

--- a/src/scss/components/_taxonomy.scss
+++ b/src/scss/components/_taxonomy.scss
@@ -1,6 +1,6 @@
 .field--name-field-tags .field__item {
   display: inline-block;
-  margin: 20px 0.5em 0;
+  margin: 10px 0.5em 0 0;
   font-size: 0.7rem;
   &:first-of-type {
     margin-left: 0;
